updated working guide 2

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ OLD/
 04_Regional_Climate_Trends/Guides/*.tex
 04_Regional_Climate_Trends/Guides/*.concordance.tex
 04_Regional_Climate_Trends/Guides/*.synctex.gz
+04_Regional_Climate_Trends/Guides/figure
 # Guides
 # 01_Introduction_to_R/*.log
 
