added advection and diffusion

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ OLD/
 04_Regional_Climate_Trends/Guides/*.concordance.tex
 04_Regional_Climate_Trends/Guides/*.synctex.gz
 04_Regional_Climate_Trends/Guides/figure
+05_Advection_Diffusion/figure
+05_Advection_Diffusion/*.log
 # Guides
 # 01_Introduction_to_R/*.log
 
